# specifications/src/main/resources/hangman-openapi.yaml
@@ -18,6 +18,7 @@ paths:
   /game/{gameId}/proposal/{letter}: 
     put:
       summary: 'Propose a letter'
+      operationId: proposeLetter
       parameters:
       - name: gameId
         in: path
@@ -67,16 +68,10 @@ components:
     ProposalResponse:
       type: object
       properties:
-        ProposedLetter:
+        message: 
           type: string
-          minLength: 1
-          maxLength: 1
           example: 
-            'a'
-        letterFound:
-          type: boolean
-          example:
-            true
+            "You have found the letter 'a'"        
         gameState:
           type: string
           enum: [inProgress, won, loose]
